--- a/styles/utilities/utilities.css
+++ b/styles/utilities/utilities.css
@@ -7,7 +7,7 @@
 /* Container */
 .container {
   width: 100%;
-  max-width: var(--container-lg);
+  max-width: var(--container-2xl);
   margin-inline: auto;
   padding-inline: var(--space-4);
 }
