--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -43,14 +43,26 @@ body {
 }
 
 /* Remove default margins */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, figure,
-ul, ol, dl, dd {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+figure,
+ul,
+ol,
+dl,
+dd {
   margin: 0;
 }
 
 /* Remove list styles */
-ul, ol {
+ul,
+ol {
   padding: 0;
   list-style: none;
 }
@@ -62,14 +74,21 @@ a {
 }
 
 /* Media */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
 /* Forms */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   margin: 0;
   padding: 0;
   font: inherit;
