--- a/components/Menu/Menu.css
+++ b/components/Menu/Menu.css
@@ -35,6 +35,7 @@
   color: var(--color-text);
   text-decoration: none;
   transition: color var(--transition-fast);
+  border-radius: var(--radius-sm);
 }
 
 .menu__link:hover,
@@ -43,14 +44,16 @@
 }
 
 /* Active Menu Item */
-.menu__item--active > .menu__link {
-  font-weight: var(--font-medium);
+.menu__item--active > .menu__link,
+.menu__link[aria-current="page"] {
+  color: var(--color-text);
+  background-color: var(--color-neutral-100);
 }
 
 /* Submenu Container */
 .menu__submenu {
   position: absolute;
-  top: 100%;
+  top: 120%;
   left: 0;
   min-width: 200px;
   list-style: none;
@@ -105,7 +108,8 @@
 }
 
 /* Active Submenu Item */
-.menu__submenu-item--active > .menu__submenu-link {
-  font-weight: var(--font-medium);
+.menu__submenu-item--active > .menu__submenu-link,
+.menu__submenu-link[aria-current="page"] {
   color: var(--color-text);
+  background-color: var(--color-neutral-100);
 }
