--- a/components/Menu/Menu.twig
+++ b/components/Menu/Menu.twig
@@ -1,8 +1,9 @@
 {#
-  Menu Component
+  Menu Component - Desktop Only
 
   Minimal desktop navigation menu
-  Displays horizontal menu with optional submenu support
+  - Desktop: Horizontal menu with dropdown submenus
+  - Mobile: Hidden (replaced by MobileMenu Vue component)
   Handles active states with aria-current attribute
 
   @param {array} items - Menu items array with structure:
