--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -23,6 +23,12 @@
   flex-shrink: 0;
 }
 
+.site-header__navigation {
+  display: flex;
+  align-items: center;
+  gap: var(--space-4);
+}
+
 .site-logo {
   display: block;
   line-height: 1;
